tests/integration/snapshots/integration__hover__label_theorem_child_file.snap
---
source: tests/integration/hover.rs
expression: "server.hover(uri, 3, 8)?"

---
{
  "contents": {
    "kind": "plaintext",
    "value": "Lemma"
  },
  "range": {
    "start": {
      "line": 3,
      "character": 5
    },
    "end": {
      "line": 3,
      "character": 12
    }
  }
}
