tests/integration/snapshots/integration__hover__label_theorem_child_file_mumber.snap
---
source: tests/integration/hover.rs
expression: "server.hover(uri, 3, 8)?"

---
{
  "contents": {
    "kind": "plaintext",
    "value": "Lemma 1 (Foo)"
  },
  "range": {
    "start": {
      "line": 3,
      "character": 5
    },
    "end": {
      "line": 3,
      "character": 12
    }
  }
}
